---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 24.08.2019
  Features:
    - Added military mode, changing the requirements of your Homeworld
---------------------------------------------------------------------------------------------------
Version: 0.0.6
Date: 24.08.2019
  Changes:
    - Improved formatting of tier details message
  Bugfixes:
    - Fixed crash when spawning portal for new game
---------------------------------------------------------------------------------------------------
Version: 0.0.5
Date: 24.08.2019
  Features:
    - Added achievements
  Bugfixes:
    - Fixed order of updates on daily requirements check
---------------------------------------------------------------------------------------------------
Version: 0.0.4
Date: 22.08.2019
  Changes:
    - Improved performance for large maps
---------------------------------------------------------------------------------------------------
Version: 0.0.3
Date: 11.08.2019
  Bugfixes:
    - Added missing name for Crop Rotation research
---------------------------------------------------------------------------------------------------
Version: 0.0.2
Date: 10.07.2019
  Bugfixes:
    - Fixed crash if no resources were delivered during the first day
  Changes:
    - Removed optional dependency on bob's greenhouse
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 10.07.2019
  Features:
    - Initial release.