@@ -8,12 +8,12 @@ data:extend({
         name = "hw-sawmill",
         icon = "__homeworld-reloaded__/graphics/icons/sawmill.png",
         icon_size = 32,
-        flags = {"player-creation", "placeable-player"},
-        minable = {mining_time = 0.3, result = "hw-sawmill"},
-        max_health = 50,
+        flags = { "player-creation", "placeable-player" },
+        minable = { mining_time = 0.3, result = "hw-sawmill" },
+        max_health = 300,
         corpse = "big-remnants",
-        collision_box = {{-1.9, -1.9}, {1.9, 1.9}},
-        selection_box = {{-2, -2}, {2, 2}},
+        collision_box = { { -1.9, -1.9 }, { 1.9, 1.9 } },
+        selection_box = { { -2, -2 }, { 2, 2 } },
         animation = {
             filename = "__homeworld-reloaded__/graphics/entity/sawmill.png",
             priority = "extra-high",
@@ -21,20 +21,20 @@ data:extend({
             height = 240,
             frame_count = 12,
             line_length = 6,
-            shift = {0.40625, -0.71875},
+            shift = { 0.40625, -0.71875 },
             animation_speed = 4
         },
-        crafting_categories = {"hw-sawmill"},
+        crafting_categories = { "hw-sawmill" },
         crafting_speed = 1,
         module_specification = { module_slots = 3, },
-        allowed_effects = {"consumption", "speed", "productivity", "pollution"},
+        allowed_effects = { "consumption", "speed", "productivity", "pollution" },
         energy_usage = "15kW",
         energy_source = {
             type = "electric",
             usage_priority = "secondary-input",
             emissions = 0.03
         },
-        open_sound = { filename = "__base__/sound/metallic-chest-open.ogg", volume=0.65 },
+        open_sound = { filename = "__base__/sound/metallic-chest-open.ogg", volume = 0.65 },
         close_sound = { filename = "__base__/sound/metallic-chest-close.ogg", volume = 0.7 }
     },
     {
@@ -51,11 +51,7 @@ data:extend({
         type = "recipe",
         name = "hw-sawmill",
         enabled = false,
-        ingredients = {
-            { "stone-brick", 10 },
-            { "iron-gear-wheel", 5 },
-            { "electronic-circuit", 2 },
-        },
+        ingredients = { { "stone-brick", 10 }, { "iron-gear-wheel", 5 }, { "electronic-circuit", 2 } },
         result = "hw-sawmill"
     },
     {
@@ -73,11 +69,9 @@ data:extend({
         category = "hw-sawmill",
         enabled = false,
         always_show_made_in = true,
-        ingredients = {
-            { "wood", 2 },
-            { "iron-plate", 1 },
-        },
-        result = "hw-furniture"
+        ingredients = { { "wood", 2 }, { "iron-plate", 1 } },
+        energy_required = 4,
+        result = "hw-furniture",
     },
     {
         type = "item",
@@ -94,7 +88,8 @@ data:extend({
         category = "hw-sawmill",
         enabled = false,
         always_show_made_in = true,
-        ingredients = {{"concrete", 1}, {"steel-plate", 1}, {"wood", 2}},
+        ingredients = { { "concrete", 1 }, { "steel-plate", 1 }, { "wood", 2 } },
+        energy_required = 10,
         result = "hw-building-materials",
     },
 })
